fix overflow behaviour

--- a/apps/react-starter/src/pages/devices/components/modal/styles.module.css
+++ b/apps/react-starter/src/pages/devices/components/modal/styles.module.css
@@ -16,3 +16,7 @@
 .ItemFullWidth {
   grid-column: 1 / 3;
 }
+
+.ModalFooter {
+  margin-top: 1rem;
+}
