--- a/apps/react-starter/src/pages/overview/styles.module.css
+++ b/apps/react-starter/src/pages/overview/styles.module.css
@@ -16,5 +16,8 @@
   flex-direction: column;
   gap: 2rem;
   overflow: hidden;
+}
+
+.List.h-100 {
   height: 100%;
 }
